    source package name (Closes: #515885)
  * debcheckout: use bzr+ssh instead of sftp, thanks to Colin Watson for
    the patch (Closes: #526068)
  * debchange: remove NMU version when -i is ran without -n or auto nmu
    (Closes: 487323)
  * uscan: add support for repacking lzma compressed tarballs, thanks to
    Michal Čihař for the patch (Closes: #514504)

 -- Ryan Niebur <ryanryan52@gmail.com>  Sat, 29 Aug 2009 22:18:08 -0700

devscripts (2.10.53) unstable; urgency=low

  The "Debconf fish!" upload

  [ Adam D. Barratt ]
  * bts:
    + Add a missing "use IO::File" to make "bts select file:foo" work.
      Thanks, Raphaël Hertzog.  (Closes: #538288)
    + Add the "affects" command to mark a bug as affecting packages other
      than the package it was filed against.
  * checkbashisms: Detect the use of "source" when the sourced filename
    contains a tilde (Closes: #528592) or consists of a single character
    (Closes: #535252).  Thanks, Raphael Geissert and Ryan Niebur.
  * debcommit: Add darcs support.  Thanks to Joachim Breitner for the patch.
    (Closes: #536037)
  * nmudiff:
    + Fix specification of BCc to control@bugs so that it's interpreted
      as an option to mutt and not as a recipient address.  Thanks, Filippo
      Giunchedi.  (Closes: #534585)
    + Add a missing "feel" to the delayed/XX template.  Thanks, Raphael
      Geissert.
  * rmadison:
    + Add patch from Ubuntu to make lookups against their database work again.
      (The server moved from people.ubuntu.com to people.canonical.com)
      (Closes: #537302)
    + When using curl, follow redirects by default.  (Also from the Ubuntu
      patch).
  * debian/control: Replace descriptions of cvs-* with those from README,
    because they're better.

  [ Patrick Schoenfeld ]
  * bts: Implement a --mutt parameter, which allows mails to be sent
    using mutt.
  * debchange: Implement a dist indication mechanism that parses